<resources>
    <string name="app_name">캘린더 플랫폼</string>
    <string name="area_name">지역명</string>
    <string name="rainfall">강수량\n(mm)</string>
    <string name="humidity">습도\n(%)</string>
    <string name="humidity_not_n">습도(%)</string>
    <string name="rain_1_hour">1시간 강수량(mm)</string>
    <string name="precipitation_form">강수형태</string>
    <string name="chance_of_shower">강수확률\n(%)</string>
    <string name="wind_direction">풍향</string>
    <string name="wind_speed">풍속</string>
    <string name="temperature">기온\n(ºC)</string>
    <string name="clock">시각</string>
    <string name="cloud">구름</string>
    <string name="wind">바람\n(m/s)</string>
    <string name="wind_not_n">바람(m/s)</string>
    <string name="sky">하늘</string>
    <string name="date">날짜</string>
    <string name="am">오전</string>
    <string name="pm">오후</string>
    <string name="ultra_srt_ncst">현재 날씨</string>
    <string name="ultra_srt_fcst">시간별 예보</string>
    <string name="vilage_fcst">3일 예보</string>
    <string name="mid_fcst">주간 예보</string>
    <string name="rain">비</string>
    <string name="sleet">비와 눈</string>
    <string name="snow">눈</string>
    <string name="shower">소나기</string>
    <string name="raindrop">빗방울</string>
    <string name="raindrop_snowdrifting">빗방울과 눈 날림</string>
    <string name="snowdrifting">눈 날림</string>
    <string name="nne">북북동</string>
    <string name="ne">북동</string>
    <string name="ene">동북동</string>
    <string name="e">동</string>
    <string name="ese">동남동</string>
    <string name="se">남동</string>
    <string name="sse">남남동</string>
    <string name="s">남</string>
    <string name="ssw">남남서</string>
    <string name="sw">남서</string>
    <string name="wsw">서남서</string>
    <string name="w">서</string>
    <string name="wnw">서북서</string>
    <string name="nw">북서</string>
    <string name="nnw">북북서</string>
    <string name="n">북</string>
    <string name="sky_sunny">맑음</string>
    <string name="cloudy_day">구름많음(낮)</string>
    <string name="cloudy_night">구름많음(밤)</string>
    <string name="fog">안개</string>
    <string name="haze">연무</string>
    <string name="lightning">낙뢰</string>
    <string name="mist">박무</string>
    <string name="overcast">흐림</string>
    <string name="partly_cloudy_day">구름조금(낮)</string>
    <string name="partly_cloudy_night">구름조금(밤)</string>
    <string name="rain_or_snow">비 또는 눈</string>
    <string name="snow_drifting">눈날림</string>
    <string name="snow_or_rain">눈 또는 비</string>
    <string name="sometimes_rain_onetime_rain">가끔 비, 한때 비</string>
    <string name="sometimes_rain_or_snow_onetime_rain_or_snow">가끔 비 또는 눈, 한때 비 또는 눈</string>
    <string name="sometimes_snow_onetime_snow">가끔 눈, 한때 눈</string>
    <string name="sometimes_snow_or_rain_onetime_snow_or_rain">가끔 눈 또는 비, 한때 눈 또는 비</string>
    <string name="sunny_day">맑음(낮)</string>
    <string name="sunny_night">맑음(밤)</string>
    <string name="yellow_dust">황사</string>
    <string name="sky_cloud">구름 많음</string>
    <string name="sky_cloudy">흐림</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_app_main">AppMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="input_location">검색할 주소/장소를 입력하세요</string>
    <string name="region_addr">지번 주소</string>
    <string name="region">지명</string>
    <string name="road_addr">도로명 주소</string>
    <string name="road">도로명</string>
    <string name="result_address">주소</string>
    <string name="result_place">장소</string>
    <string name="result_activity_myloc_center">현재 위치</string>
    <string name="result_activity_map_center">지도 중심</string>
    <string name="choice">선택</string>
    <string name="cancel_location">선택 취소</string>
    <string name="save_button">저장</string>
    <string name="delete_button">삭제</string>
    <string name="share_button">공유</string>
    <string name="edit_button">수정</string>
    <string name="calendar_type">달력 유형</string>
    <string name="day">일</string>
    <string name="month">월</string>
    <string name="week">주</string>
    <string name="year">년</string>
    <string name="repeat_days">일 마다 반복</string>
    <string name="repeat_months">개월 마다 반복</string>
    <string name="repeat_weeks">주 마다 반복</string>
    <string name="repeat_years">년 마다 반복</string>
    <string name="hour">시간</string>
    <string name="minute">분</string>
    <string name="favorite_location">주소/장소 즐겨찾기</string>
    <string name="app_settings">설정</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday_full">일요일</string>
    <string name="monday_full">월요일</string>
    <string name="tuesday_full">화요일</string>
    <string name="wednesday_full">수요일</string>
    <string name="thursday_full">목요일</string>
    <string name="friday_full">금요일</string>
    <string name="saturday_full">토요일</string>
    <string name="new_event">일정 추가</string>
    <string name="show_schedules">일정 표시</string>
    <string name="schedules_in_google">구글 일정</string>
    <string name="schedules_in_device">휴대전화 일정</string>
    <string name="signin">로그인</string>
    <string name="signout">로그아웃</string>
    <string name="connect">연결</string>
    <string name="disconnect">연결 해제</string>
    <string name="info_around_location">주변</string>
    <string name="connected_google_calendar">구글 캘린더 연결됨</string>
    <string name="disconnected_google_calendar">구글 캘린더 연결해제됨</string>
    <string name="supermarket">대형마트</string>
    <string name="convenience_store">편의점</string>
    <string name="kindergarten">어린이집/유치원</string>
    <string name="school">학교</string>
    <string name="academy">학원</string>
    <string name="parking_lot">주차장</string>
    <string name="gas_station">주유소</string>
    <string name="station">주유소/충전소</string>
    <string name="ev_station">전기차 충전소</string>
    <string name="lpg_station">가스 충전소</string>
    <string name="fcev_station">수소 충전소</string>
    <string name="subway_station">지하철역</string>
    <string name="bank">은행</string>
    <string name="cultural_facilities">문화시설</string>
    <string name="brokerage">중개업소</string>
    <string name="public_institutions">공공기관</string>
    <string name="attractions">관광명소</string>
    <string name="accomodations">숙박</string>
    <string name="restaurant">음식점</string>
    <string name="cafe">카페</string>
    <string name="hospital">병원</string>
    <string name="pharmacy">약국</string>
    <string name="atm">ATM</string>
    <string name="show_more">더 보기</string>
    <string name="request_to_make_gps_on">GPS가 꺼져있습니다. GPS를 켜주세요.</string>
    <string name="no">아니오</string>
    <string name="check">확인</string>
    <string name="network_not_connected">네트워크 오류</string>
    <string name="preferences_selected_calendars_key">selected_calendars</string>
    <string name="preferences_selected_calendar_type_key">selected_calendar_type</string>
    <string name="completed_selection">선택 완료</string>
    <string name="cancel">취소</string>
    <string name="default_event_title">제목 없음</string>
    <string name="title">제목</string>
    <string name="calendar">캘린더</string>
    <string name="time">시간</string>
    <string name="timezone">시간대</string>
    <string name="recurrence">반복</string>
    <string name="reminder">알림</string>
    <string name="description">설명</string>
    <string name="location">위치</string>
    <string name="attendee">참석자</string>
    <string name="accesslevel">공개 범위</string>
    <string name="availability">유효성</string>
    <string name="not_title">제목 입력</string>
    <string name="all_day">하루 종일</string>
    <string name="not_allday">시간</string>
    <string name="start_date">시작일</string>
    <string name="end_date">종료일</string>
    <string name="start_time">시작 시각</string>
    <string name="end_time">종료 시각</string>
    <string name="request_reselect_date">날짜를 재 선택 해주세요</string>
    <string name="remind_before">전에 알림</string>
    <string name="not_reminder">알림 없음</string>
    <string name="ok_reminder">알림 사용</string>
    <string name="not_attendee">참석자 없음</string>
    <string name="not_location">위치 없음</string>
    <string name="not_description">설명 없음</string>
    <string name="access_public">공개</string>
    <string name="access_private">비공개</string>
    <string name="access_default">기본</string>
    <string name="busy">바쁨</string>
    <string name="free">자유</string>
    <string name="not_recurrence">반복 안함</string>
    <string name="recurrence_daily">매일</string>
    <string name="recurrence_weekly">매주</string>
    <string name="recurrence_monthly">매월</string>
    <string name="recurrence_yearly">매년</string>
    <string name="recurrence_custom">맞춤 설정</string>
    <string name="repeat_interval">반복 주기</string>
    <string name="recurrence_day">반복 요일</string>
    <string name="keeping_recurrence">계속 반복</string>
    <string name="certain_recurrence_number">일정 반복 횟수</string>
    <string name="recurrence_end_date">종료 날짜</string>
    <string name="datepicker">날짜 선택</string>
    <string name="timepicker">시각 선택</string>
    <string name="start">시작</string>
    <string name="end">종료</string>
    <string name="end_after_n_repetition">회 반복 후 종료</string>
    <string name="ends_at">종료</string>
    <string name="N_days_of_each_month">일 마다</string>
    <string name="N_day">요일 마다</string>
    <string name="N_weeks_of_each_month">번째 주</string>
    <string name="count">회</string>
    <string name="up_to">까지</string>
    <string name="input_timezone">국가명 또는 시간대를 입력하세요</string>
    <string name="notification_on_time">정시에 알림</string>
    <string name="detail">상세정보</string>
    <string name="request_select_location_title">상세한 위치 지정</string>
    <string name="request_select_location_description">날씨, 주변 정보 등을 표시하기 위해 상세한 주소 또는 장소를 선택하시겠습니까?</string>
    <string name="need_register_detail_location">날씨, 주변 정보 등을 표시하려면 상세한 주소 또는 장소를 선택하십시오.</string>
    <string name="not_selected_location_in_event">이벤트내에 위치가 지정되지 않았습니다.</string>
    <string name="add_reminder">알림 추가</string>
    <string name="ATTENDEE_STATUS_NONE">""</string>
    <string name="ATTENDEE_STATUS_ACCEPTED">참석</string>
    <string name="ATTENDEE_STATUS_DECLINED">불참석</string>
    <string name="ATTENDEE_STATUS_INVITED">초대됨</string>
    <string name="ATTENDEE_STATUS_TENTATIVE">미정</string>
    <string name="RELATIONSHIP_NONE">""</string>
    <string name="RELATIONSHIP_ATTENDEE">참석자</string>
    <string name="RELATIONSHIP_ORGANIZER">조직자</string>
    <string name="RELATIONSHIP_PERFORMER">수행자</string>
    <string name="RELATIONSHIP_SPEAKER">발언자</string>
    <string name="attendee_authority">참석자 권한</string>
    <string name="modify_event">일정 수정</string>
    <string name="weather">날씨</string>
    <string name="map">지도</string>
    <string name="instance_info">이벤트 정보</string>
    <string name="search">검색</string>
    <string name="search_history">검색 기록</string>
    <string name="delete_all">모두 삭제</string>
    <string name="not_search_history">검색 기록 없음</string>
    <string name="settings">설정</string>
    <string name="favorites">즐겨찾기</string>
    <string name="main">메인</string>
    <string name="address_place">주소, 장소</string>
    <string name="tag_default_map">tag_default_map</string>
    <string name="tag_all_favorite_restaurant_host_fragment">tag_all_favorite_restaurant_host_fragment</string>
    <string name="tag_all_favorite_locations_host_fragment">tag_all_favorite_locations_host_fragment</string>
</resources>