<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="false"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <RadioGroup
                    android:id="@+id/recurrence_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp">

                    <RadioButton
                        android:id="@+id/not_recurrence_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/not_recurrence" />

                    <RadioButton
                        android:id="@+id/recurrence_daily_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recurrence_daily" />

                    <RadioButton
                        android:id="@+id/recurrence_weekly_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recurrence_weekly" />

                    <RadioButton
                        android:id="@+id/recurrence_monthly_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recurrence_monthly" />

                    <RadioButton
                        android:id="@+id/recurrence_yearly_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recurrence_yearly" />

                    <RadioButton
                        android:id="@+id/recurrence_custom_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recurrence_custom" />

                </RadioGroup>

                <include
                    android:id="@+id/recurrence_custom_rule"
                    layout="@layout/recurrence_custom_rule"
                    android:visibility="gone" />

                <include
                    android:id="@+id/recurrence_detail_rule"
                    layout="@layout/recurrence_detail_rule" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>