<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/calendar_type" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/calendar_type_toggle_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/calendar_type_day"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/day_icon"
            android:text="@string/day" />

        <Button
            android:id="@+id/calendar_type_week"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/week_icon"
            android:text="@string/week" />

        <Button
            android:id="@+id/calendar_type_month"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/month_icon"
            android:text="@string/month" />

    </com.google.android.material.button.MaterialButtonToggleGroup>
</LinearLayout>