<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <com.zerodsoft.scheduleweather.event.main.EventFunctionItemView
        android:id="@+id/function_event_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:img="@drawable/event_svg"
        app:title="@string/instance_info" />

    <com.zerodsoft.scheduleweather.event.main.EventFunctionItemView
        android:id="@+id/function_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:img="@drawable/sunny_day_svg"

        app:title="@string/weather" />

    <com.zerodsoft.scheduleweather.event.main.EventFunctionItemView
        android:id="@+id/function_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:img="@drawable/restaurant_svg"
        app:title="@string/restaurant" />


</LinearLayout>